# tinify-pics

./: Cargo.toml  EXAMPLE.ENV  README.md
src/: main.rs
